# diffusion-core

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  decisions_log.md  index.md  mkdocs.yml  problems_log.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: blocks_artifacts.yaml  ci.yml  semantic-pr-title.yml
configs/: smoke.yaml
docs/: CONTRIBUTING.md  SECURITY.md  contract_tests.md  debugging.md  decisions_log.md  enviroment.md  index.md  plan.md  problems_log.md  run_layout_contract.md  smoke_test.md  ssot.md  the_artifacts_policy.md  the_docstrings_policy.md  uv.md
src/diffusion_core/: __init__.py  cli.py  provenance.py
src/diffusion_core/config/: __init__.py  config_utils.py  run_layout.py  runner.py
tests/: README.md  conftest.py  test_blocks_artifacts.py  test_cli.py  test_enforces_docstrings.py  test_precommit_guard.py  test_smoke.py
tests/config/: test_cli.py  test_config_runner.py  test_config_utils.py  test_run_layout.py
tests/precommit_and_CI/: test_blocks_artifacts.py  test_enforces_docstrings.py  test_precommit_guard.py
tools/: blocks_artifacts.py  enforce_docstrings.py  precommit_guard.py
